@@ -1,5 +1,6 @@
 29-June-2011 Michael Babker Version 1.7 Changes
 # Modified podcast summary field to allow up to 5120 characters
+# Fixed storage bug with itunescategory field
 
 28-June-2011 Michael Babker Version 1.7 Changes
 # Correct counts for feeds view
